# MPRUsingQml_vtk9

./: .gitignore  3d-multiWindow-sync.cc  3d-view.py  ImagePlaneWidget.py  README.md  ResliceInterpolationModes.py  ResliceToColors.py  push.sh  test_v16_render.py  tutorial-01.py  tutorial-02-obsver.py  tutorial-03-multiRenderOneWindow.py  tutorial-03.py  tutorial-04-multiActor.py  tutorial-06-widget3d.py
src/: CMakeLists.txt  MPR_3d_view.qml  MainViewPort.qml  MultiSlice3x3.qml  MultiSlice4x4.qml  MultiSliceRenderItem.qml  README.md  ScaleBar3D.qml  build.sh  main.cpp  main.qml  multiplanarview.cpp  multiplanarview.h  multisliceview.cpp  multisliceview.h  qml.qrc  threedimensionveiw.cpp  threedimensionveiw.h
